--- a/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
@@ -71,9 +71,11 @@
     <Compile Include="HiveServerCorePlugin.cs" />
     <Compile Include="HiveServerMessages.Designer.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IClientAdapter.cs" />
+    <Compile Include="InternalInterfaces\DataAccess\IClientGroupAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IPermissionOwnerAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IResourceAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IUserAdapter.cs" />
+    <Compile Include="InternalInterfaces\DataAccess\IUserGroupAdapter.cs" />
     <Compile Include="JobManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConsoleFacade.cs" />
