refactored for #418, disabled the  Client Console Project
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@919 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
@@ -69,6 +69,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientConsoleService\ClientConsoleCommunicator.cs" />
+    <Compile Include="ClientConsoleService\ClientConsoleServer.cs" />
+    <Compile Include="ClientConsoleService\Interfaces\IClientConsoleCommunicator.cs" />
+    <Compile Include="ClientConsoleService\TransferObjects\ConnectionContainer.cs" />
+    <Compile Include="ClientConsoleService\TransferObjects\JobStatus.cs" />
+    <Compile Include="ClientConsoleService\TransferObjects\StatusCommons.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="CoreApplication.cs" />
