updated semweb assemblies to most recent versions. #419 (Refactor CEDMA plugins)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@920 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
+++ b/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
@@ -51,7 +51,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SemWeb, Version=1.0.6.2, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="SemWeb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -104,9 +104,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="SemWeb.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SemWeb.SqliteStore.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
