Implementation of UserRoleManager (#417)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@952 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
@@ -83,6 +83,7 @@
     <Compile Include="BusinessObjects\ClientConfig.cs" />
     <Compile Include="BusinessObjects\User.cs" />
     <Compile Include="BusinessObjects\UserGroup.cs" />
+    <Compile Include="ResponseObject.cs" />
     <Compile Include="Interfaces\IJob.cs" />
     <Compile Include="Interfaces\IClientManager.cs" />
     <Compile Include="Interfaces\IJobManager.cs" />
