--- a/sources/HeuristicLab.Hive.Client.Console/app.config
+++ b/sources/HeuristicLab.Hive.Client.Console/app.config
@@ -1,33 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HeuristicLab.Hive.Client.Console.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <system.serviceModel>
         <bindings>
-          <netTcpBinding>
-            <binding name="NetTcpBinding_IClientConsoleCommunicator" closeTimeout="00:01:00"
-                openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions"
-                hostNameComparisonMode="StrongWildcard" listenBacklog="10"
-                maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10"
-                maxReceivedMessageSize="65536">
-              <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                  maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-              <reliableSession ordered="true" inactivityTimeout="00:10:00"
-                  enabled="false" />
-              <security mode="Transport">
-                <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
-                <message clientCredentialType="Windows" />
-              </security>
-            </binding>
-          </netTcpBinding>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IClientConsoleCommunicator" closeTimeout="00:01:00"
+                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                    transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions"
+                    hostNameComparisonMode="StrongWildcard" listenBacklog="10"
+                    maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10"
+                    maxReceivedMessageSize="65536">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00"
+                        enabled="false" />
+                    <security mode="Transport">
+                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
+                        <message clientCredentialType="Windows" />
+                    </security>
+                </binding>
+            </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="net.tcp://127.0.0.1:8000/ClientConsole/ClientConsoleCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientConsoleCommunicator"
-                contract="ClientWCFService.IClientConsoleCommunicator" name="NetTcpBinding_IClientConsoleCommunicator">
+                contract="ClientService.IClientConsoleCommunicator" name="NetTcpBinding_IClientConsoleCommunicator">
                 <identity>
                     <userPrincipalName value="mse08004@fhs-hagenberg.ac.at" />
                 </identity>
             </endpoint>
         </client>
     </system.serviceModel>
+    <userSettings>
+        <HeuristicLab.Hive.Client.Console.Properties.Settings>
+            <setting name="IpAdress" serializeAs="String">
+                <value>10.0.0.1</value>
+            </setting>
+        </HeuristicLab.Hive.Client.Console.Properties.Settings>
+    </userSettings>
 </configuration>
