--- a/sources/HeuristicLab.Hive.Server.Console/HeuristicLab.Hive.Server.Console.csproj
+++ b/sources/HeuristicLab.Hive.Server.Console/HeuristicLab.Hive.Server.Console.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
