--- a/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
@@ -72,6 +72,7 @@
     <Compile Include="HiveServerMessages.Designer.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IClientAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IClientGroupAdapter.cs" />
+    <Compile Include="InternalInterfaces\DataAccess\IDataAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IJobAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IPermissionOwnerAdapter.cs" />
     <Compile Include="InternalInterfaces\DataAccess\IResourceAdapter.cs" />
