Added job results data adapter interface for the Hive DAL (#372)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1000 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/HeuristicLab.Hive.Server.ADODataAccess.csproj
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/HeuristicLab.Hive.Server.ADODataAccess.csproj
@@ -79,6 +79,7 @@
     <Compile Include="HiveServerADODataAccessPlugin.cs" />
     <Compile Include="ICachedDataAdapter.cs" />
     <Compile Include="JobAdapter.cs" />
+    <Compile Include="JobResultsAdapter.cs" />
     <Compile Include="PermissionOwnerAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
