--- a/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
@@ -119,6 +119,10 @@
       <Project>{134F93D7-E7C8-4ECD-9923-7F63259A60D8}</Project>
       <Name>HeuristicLab.Hive.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Hive.Job\HeuristicLab.Hive.JobBase.csproj">
+      <Project>{21187322-52DD-4243-80A4-A85F0263E63B}</Project>
+      <Name>HeuristicLab.Hive.JobBase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
