added new features (#397)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1002 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
+++ b/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
@@ -112,6 +112,7 @@
     <Compile Include="IPAdressTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ListViewColumnSorterDate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EventLogEntryForm.resx">
       <DependentUpon>EventLogEntryForm.cs</DependentUpon>
