--- a/sources/HeuristicLab.Hive.Client.Communication/app.config
+++ b/sources/HeuristicLab.Hive.Client.Communication/app.config
@@ -21,11 +21,11 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.0.0.64:9000/HiveServer/ClientCommunicator"
+            <endpoint address="net.tcp://10.20.53.3:9000/HiveServer/ClientCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientCommunicator"
                 contract="ServerService.IClientCommunicator" name="NetTcpBinding_IClientCommunicator">
                 <identity>
-                    <userPrincipalName value="sem-PC\sem" />
+                    <userPrincipalName value="mse08003@fhs-hagenberg.ac.at" />
                 </identity>
             </endpoint>
         </client>
